src/objects/Report_Master__c.object
<CustomObject>
    <description>Report Master custom table to load the batch status</description>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>End Date time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Job_Date__c</fullName>
        <description>Job Date field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Job_Status__c</fullName>
        <description>Status of the Job</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Job Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Month__c</fullName>
        <description>Report Month</description>
        <label>Report Month</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Report_Year__c</fullName>
        <label>Report Year</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>start time</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_JVD__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total JVD</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_JV__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total JV</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Record_Processed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Record Processed</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Record_UnProcessed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Total Record UnProcessed</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Total_Records__c</fullName>
        <label>Total Records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type Field</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Report Master</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>TEMP</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Job_Status__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>TEMP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TODAY</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Job_Date__c</columns>
        <columns>Start_Date__c</columns>
        <columns>End_Date__c</columns>
        <columns>Total_Records__c</columns>
        <columns>Job_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <label>TODAY</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Master Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ReportMasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>